--- a/index.html
+++ b/index.html
@@ -11,30 +11,35 @@
 <body>
     <div class="main">
         <div class="heading">
-            <div id="pname">coazz</div>
-            <div id="searchbar">Search</div>
-            <div class="rheading">
-                <div class="rheadingel" id="lang">En</div>
-                <div class="rheadingel" id="bellsybmol">bell</div>
-                <div class="rheadingel" id="pimg">Profilepic</div>
+            <div class="head">
+                <div id="pname">coazz</div>
+                <div id="searchbar">Search</div>
+            </div>
+            <div class="head">
+                <div id="lang">En</div>
+                <div id="bellsymbol">bell</div>
+                <div id="pimg">Profilepic</div>
             </div>
         </div>
         <div class="pagebody">
             <div class="sidebar">
-                <div id="sidehead"></div>
-                <div>A</div>
-                <div>B</div>
-                <div>d</div>
-                <div>d</div>
-                <div>d</div>
-                <div>d</div>
-                <div>d</div>
+                <div id="sidehead">
+                    <div>Pages</div>
+                </div>
+                <div class="sites">
+                    <div>A</div>
+                    <div>B</div>
+                    <div>d</div>
+                    <div>d</div>
+                    <div>d</div>
+                    <div>d</div>
+                    <div>d</div>
+                </div>
             </div>
             <div class="overview">
                 <div></div>
             </div>
         </div>
-
     </div>
 </body>
 </html>
