--- a/index.html
+++ b/index.html
@@ -6,36 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="main.js"></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">    <title>Document</title>
 </head>
 <body>
     <div class="main">
         <div class="heading">
             <div class="head">
-                <div id="pname">coazz</div>
-                <div id="searchbar">Search</div>
+                <img id="homeicon" src="images/home.png">
+                <div id="pname">Dashboard</div>
+                <div id="searchbar">
+                    <img id="search" src="images/search.png">
+                    <input id="search" type="text" placeholder="Search..">
+                </div>
             </div>
             <div class="head">
-                <div id="lang">En</div>
-                <div id="bellsymbol">bell</div>
-                <div id="pimg">Profilepic</div>
+                <div id="lang">en</div>
+                <div id="bellsymbol"><img id="bell" src="images/bell.png"></div>
+                <div id="pimg"><img id="profilepic" src="images/profile.png"></div>
             </div>
         </div>
         <div class="pagebody">
             <div class="sidebar">
                 <div id="sidehead">
-                    <div>Pages</div>
+                    <div id="pname">Pages</div>
                 </div>
-                <div class="sites">
-                    <div class="abc">
-                        <div id="test">A</div>
-                        <div id="test">B</div>
-                        <div id="test">B</div>
-                        <div id="test">B</div>
-                        <div id="test">B</div>
-                        <div id="test">B</div>
-                        <div id="test">B</div>
-                    </div>
+                <div class="sitelinks">
+                    <ul class="links">
+                        <li><i></i>
+                            <p>A</p></li>
+                        <li><p>A</p></li>
+                        <li><p>A</p></li>
+                        <li><p>A</p></li>
+                    </ul>
                 </div>
             </div>
             <div class="overview">
